@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: add sourcepkgid index and permit queries of the (non-existent) tag.
     - rpm.org: permit mire RE's against binary data. Useless ... (#277161).
     - rpm.org: mire RE against missing data now mis-matches rather than matches.
     - jbj: remove ancient %verifyscript tag != 1079 retrofit.
